--- a/SattiliteDataAcquisition/SattiliteDataAcquisition.csproj
+++ b/SattiliteDataAcquisition/SattiliteDataAcquisition.csproj
@@ -87,6 +87,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SattiliteUdp.cs" />
     <Compile Include="SattiliteCom.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
